--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@msgpack/msgpack": "^3.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
