--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,15 +49,13 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const tag = '${{ steps.version.outputs.app_version }}';
-            const checkName = 'Build App';
             const maxWaitTime = 30 * 60 * 1000; // 30 minutes
             const pollInterval = 10 * 1000; // 10 seconds
             const startTime = Date.now();
 
             console.log(`Looking for tag: ${tag} in brewos-io/app`);
 
-            // Get the commit SHA for the tag (with retry in case tag is being created)
-            let commitSha;
+            // Verify tag exists (with retry in case tag is being created)
             const tagWaitTime = 5 * 60 * 1000; // 5 minutes to wait for tag
             const tagPollInterval = 5 * 1000; // 5 seconds
             const tagStartTime = Date.now();
@@ -70,8 +68,7 @@ jobs:
                   repo: 'app',
                   ref: `tags/${tag}`
                 });
-                commitSha = ref.object.sha;
-                console.log(`✓ Tag ${tag} found! Points to commit: ${commitSha}`);
+                console.log(`✓ Tag ${tag} found! Points to commit: ${ref.object.sha}`);
                 tagFound = true;
               } catch (error) {
                 if (error.status === 404) {
@@ -92,144 +89,92 @@ jobs:
               );
             }
 
-            core.setOutput('commit_sha', commitSha);
-
-            // Find workflow runs for this commit
-            console.log(`Looking for workflow runs for commit ${commitSha} (tag: ${tag})...`);
+            // Find workflow runs by tag name (workflows triggered by tag push use the tag as head_branch)
+            console.log(`Looking for workflow runs for tag: ${tag}...`);
             let workflowRun = null;
+            let attempts = 0;
 
-            // Search by commit SHA
-            console.log(`Searching for workflow runs by commit SHA...`);
-            const { data: runsBySha } = await github.rest.actions.listWorkflowRuns({
-              owner: 'brewos-io',
-              repo: 'app',
-              workflow_id: 'release.yml',
-              head_sha: commitSha,
-              per_page: 50
-            });
-            console.log(`Found ${runsBySha.workflow_runs.length} run(s) by commit SHA`);
+            // Search for workflow runs matching the tag name
+            const findWorkflowRun = async () => {
+              // Search by tag ref
+              let runsByTag = { workflow_runs: [] };
+              try {
+                const { data } = await github.rest.actions.listWorkflowRuns({
+                  owner: 'brewos-io',
+                  repo: 'app',
+                  workflow_id: 'release.yml',
+                  ref: tag,
+                  per_page: 50
+                });
+                runsByTag = data;
+              } catch (error) {
+                console.log(`Could not search by tag ref: ${error.message}`);
+              }
 
-            // Search by tag ref (workflows triggered by tag push use the tag as head_branch)
-            console.log(`Searching for workflow runs by tag ref...`);
-            let runsByTag = { workflow_runs: [] };
-            try {
-              const { data } = await github.rest.actions.listWorkflowRuns({
+              // Also search recent workflow runs to catch any that might not be indexed yet
+              const { data: recentRuns } = await github.rest.actions.listWorkflowRuns({
                 owner: 'brewos-io',
                 repo: 'app',
                 workflow_id: 'release.yml',
-                ref: tag,
-                per_page: 50
+                per_page: 200
               });
-              runsByTag = data;
-              console.log(`Found ${runsByTag.workflow_runs.length} run(s) by tag ref`);
-            } catch (error) {
-              console.log(`Could not search by tag ref: ${error.message}`);
-            }
 
-            // Search recent workflow runs to catch any that might not be indexed yet
-            console.log(`Searching recent workflow runs...`);
-            const { data: recentRuns } = await github.rest.actions.listWorkflowRuns({
-              owner: 'brewos-io',
-              repo: 'app',
-              workflow_id: 'release.yml',
-              per_page: 200 // Increased to catch older runs
-            });
-            console.log(`Found ${recentRuns.workflow_runs.length} recent workflow run(s)`);
-
-            // Combine and deduplicate runs
-            const allRuns = [...runsBySha.workflow_runs];
-            const runsByTagName = [];
-
-            // Add runs from tag search
-            runsByTag.workflow_runs.forEach(run => {
-              if (!allRuns.find(r => r.id === run.id)) {
-                if (run.head_sha === commitSha) {
-                  allRuns.push(run);
-                  console.log(`Added run ${run.id} from tag search (matches commit SHA)`);
-                } else if (run.head_branch === tag) {
-                  // Keep track of runs that match by tag name but not commit SHA
-                  runsByTagName.push(run);
-                  console.log(`Found run ${run.id} matching tag name but different commit SHA: ${run.head_sha}`);
-                } else {
-                  console.log(`Skipping run ${run.id} from tag search (no match: head_sha=${run.head_sha}, head_branch=${run.head_branch})`);
+              // Combine and filter by tag name (head_branch)
+              const matchingRuns = [];
+              
+              // Add runs from tag ref search
+              runsByTag.workflow_runs.forEach(run => {
+                if (run.head_branch === tag && !matchingRuns.find(r => r.id === run.id)) {
+                  matchingRuns.push(run);
                 }
-              }
-            });
+              });
 
-            // Add runs from recent search that match commit SHA
-            recentRuns.workflow_runs.forEach(run => {
-              if (!allRuns.find(r => r.id === run.id) && run.head_sha === commitSha) {
-                allRuns.push(run);
-              }
-            });
-
-            // Also check recent runs for tag name matches (fallback for moved tags)
-            recentRuns.workflow_runs.forEach(run => {
-              if (!allRuns.find(r => r.id === run.id) && !runsByTagName.find(r => r.id === run.id)) {
-                if (run.head_branch === tag) {
-                  runsByTagName.push(run);
-                  console.log(`Found recent run ${run.id} matching tag name: ${run.head_branch}`);
+              // Add runs from recent search that match tag name
+              recentRuns.workflow_runs.forEach(run => {
+                if (run.head_branch === tag && !matchingRuns.find(r => r.id === run.id)) {
+                  matchingRuns.push(run);
                 }
-              }
-            });
-
-            console.log(`Total runs matching commit SHA: ${allRuns.length}`);
-            console.log(`Total runs matching tag name (fallback): ${runsByTagName.length}`);
-            if (allRuns.length > 0) {
-              console.log(`Commit SHA matched runs:`);
-              allRuns.forEach(run => {
-                console.log(`  - Run ${run.id}: status=${run.status}, conclusion=${run.conclusion}, head_sha=${run.head_sha}`);
               });
-            }
-            if (runsByTagName.length > 0) {
-              console.log(`Tag name matched runs (fallback):`);
-              runsByTagName.forEach(run => {
-                console.log(`  - Run ${run.id}: status=${run.status}, conclusion=${run.conclusion}, head_sha=${run.head_sha}, head_branch=${run.head_branch}`);
-              });
-            }
 
-            // STRATEGY: 
-            // 1. First prefer runs matching commit SHA (ideal case)
-            // 2. If none found, use runs matching tag name (handles moved tags or manual triggers)
-            let matchingRuns = allRuns.filter(run => run.head_sha === commitSha);
-            console.log(`Runs matching commit SHA ${commitSha}: ${matchingRuns.length}`);
+              return matchingRuns;
+            };
 
-            // Fallback: if no commit SHA match, use tag name match
-            // This handles cases where:
-            // - Tag was moved/recreated after workflow started
-            // - Workflow was manually triggered
-            if (matchingRuns.length === 0 && runsByTagName.length > 0) {
-              console.log(`⚠️ No commit SHA match found. Using tag name fallback...`);
-              matchingRuns = runsByTagName;
-            }
+            // Try to find existing workflow run
+            while (!workflowRun && (Date.now() - startTime) < maxWaitTime) {
+              attempts++;
+              const matchingRuns = await findWorkflowRun();
 
-            if (matchingRuns.length > 0) {
-              // Prefer completed successful runs first (but only for the correct commit)
-              const completedRun = matchingRuns.find(run => 
-                run.status === 'completed' && run.conclusion === 'success'
-              );
-              
-              if (completedRun) {
-                workflowRun = completedRun;
-                console.log(`✓ Found completed successful workflow run: ${workflowRun.id}`);
-                console.log(`  Created: ${workflowRun.created_at}`);
-                console.log(`  Completed: ${workflowRun.updated_at}`);
-                console.log(`  Commit SHA: ${workflowRun.head_sha}`);
-                core.setOutput('run_id', workflowRun.id);
-                return; // Exit early, no need to wait
-              }
-              
-              // Check for in-progress or queued runs (for the correct commit)
-              const inProgressRun = matchingRuns.find(run => 
-                run.status === 'in_progress' || run.status === 'queued'
-              );
-              
-              if (inProgressRun) {
-                workflowRun = inProgressRun;
-                console.log(`Found in-progress workflow run: ${workflowRun.id} (status: ${workflowRun.status})`);
-                console.log(`  Commit SHA: ${workflowRun.head_sha}`);
-              } else {
-                // Use most recent run matching the commit (might be failed, but we'll check)
+              if (matchingRuns.length > 0) {
+                console.log(`Found ${matchingRuns.length} run(s) matching tag ${tag}`);
+                
+                // Prefer completed successful runs first
+                const completedRun = matchingRuns.find(run => 
+                  run.status === 'completed' && run.conclusion === 'success'
+                );
+                
+                if (completedRun) {
+                  workflowRun = completedRun;
+                  console.log(`✓ Found completed successful workflow run: ${workflowRun.id}`);
+                  console.log(`  Created: ${workflowRun.created_at}`);
+                  console.log(`  Completed: ${workflowRun.updated_at}`);
+                  console.log(`  Commit SHA: ${workflowRun.head_sha}`);
+                  core.setOutput('run_id', workflowRun.id);
+                  return; // Exit early, no need to wait
+                }
+                
+                // Check for in-progress or queued runs
+                const inProgressRun = matchingRuns.find(run => 
+                  run.status === 'in_progress' || run.status === 'queued'
+                );
+                
+                if (inProgressRun) {
+                  workflowRun = inProgressRun;
+                  console.log(`Found in-progress workflow run: ${workflowRun.id} (status: ${workflowRun.status})`);
+                  console.log(`  Commit SHA: ${workflowRun.head_sha}`);
+                  break;
+                }
+                
+                // Use most recent run (might be failed, but we'll check)
                 workflowRun = matchingRuns.sort((a, b) => 
                   new Date(b.created_at) - new Date(a.created_at)
                 )[0];
@@ -240,65 +185,11 @@ jobs:
                 if (workflowRun.status === 'completed' && workflowRun.conclusion !== 'success') {
                   throw new Error(`Workflow run ${workflowRun.id} completed with conclusion: ${workflowRun.conclusion}`);
                 }
-              }
-            }
-
-            // If no workflow run found at all, wait for it to start (tag might have just been pushed)
-            if (!workflowRun) {
-              console.log(`No workflow run found yet. Tag exists, so workflow should start soon...`);
-              let attempts = 0;
-              const maxInitialAttempts = 12; // Wait up to 2 minutes for workflow to start
-              
-              while (!workflowRun && attempts < maxInitialAttempts && (Date.now() - startTime) < maxWaitTime) {
-                attempts++;
-                
-                // Search by commit SHA first
-                const { data: newRunsBySha } = await github.rest.actions.listWorkflowRuns({
-                  owner: 'brewos-io',
-                  repo: 'app',
-                  workflow_id: 'release.yml',
-                  head_sha: commitSha,
-                  per_page: 10
-                });
-                
-                // Also search recent runs for tag name match (fallback)
-                const { data: recentRunsCheck } = await github.rest.actions.listWorkflowRuns({
-                  owner: 'brewos-io',
-                  repo: 'app',
-                  workflow_id: 'release.yml',
-                  per_page: 20
-                });
-                
-                // Combine: prefer commit SHA match, fallback to tag name match
-                let candidateRuns = newRunsBySha.workflow_runs;
-                if (candidateRuns.length === 0) {
-                  candidateRuns = recentRunsCheck.workflow_runs.filter(run => run.head_branch === tag);
-                }
-                
-                if (candidateRuns.length > 0) {
-                  // Check for completed successful first
-                  const completed = candidateRuns.find(run => 
-                    run.status === 'completed' && run.conclusion === 'success'
-                  );
-                  if (completed) {
-                    workflowRun = completed;
-                    console.log(`✓ Found completed workflow run: ${workflowRun.id} (head_branch: ${workflowRun.head_branch})`);
-                    core.setOutput('run_id', workflowRun.id);
-                    return;
-                  }
-                  
-                  workflowRun = candidateRuns[0];
-                  console.log(`Found workflow run: ${workflowRun.id} (status: ${workflowRun.status}, head_branch: ${workflowRun.head_branch})`);
-                  break;
-                }
-                
-                console.log(`Attempt ${attempts}: No workflow run found yet, waiting ${pollInterval/1000}s...`);
-                await new Promise(resolve => setTimeout(resolve, pollInterval));
+                break;
               }
               
-              // If still no workflow run after initial attempts, the tag might be old
-              if (!workflowRun) {
-                // Check tag creation time
+              // If no workflow run found, check if tag is old
+              if (attempts === 12) { // After 2 minutes of searching
                 let tagDate;
                 try {
                   const { data: tagInfo } = await github.rest.repos.getTag({
@@ -306,7 +197,6 @@ jobs:
                     repo: 'app',
                     tag: tag
                   });
-                  // Try different date fields
                   tagDate = new Date(tagInfo.tagger?.date || tagInfo.commit?.committer?.date || Date.now());
                 } catch (error) {
                   tagDate = new Date();
@@ -316,57 +206,20 @@ jobs:
                 console.log(`Tag age: ${minutesSinceTag.toFixed(1)} minutes`);
                 
                 if (minutesSinceTag > 10) {
-                  // Tag is more than 10 minutes old, workflow should have run by now
                   throw new Error(
-                    `No workflow run found for tag ${tag} (commit ${commitSha}). ` +
-                    `Tag was created ${minutesSinceTag.toFixed(0)} minutes ago. ` +
+                    `No workflow run found for tag ${tag} after ${minutesSinceTag.toFixed(0)} minutes. ` +
                     `The app release workflow may not have been triggered. ` +
                     `Please check if the workflow exists and is configured to run on tag pushes.`
                   );
                 }
-                
-                // Continue waiting if tag is recent
-                console.log(`Tag is recent, continuing to wait for workflow to start...`);
-                while (!workflowRun && (Date.now() - startTime) < maxWaitTime) {
-                  attempts++;
-                  
-                  // Search by commit SHA first
-                  const { data: newRunsBySha2 } = await github.rest.actions.listWorkflowRuns({
-                    owner: 'brewos-io',
-                    repo: 'app',
-                    workflow_id: 'release.yml',
-                    head_sha: commitSha,
-                    per_page: 10
-                  });
-                  
-                  // Also search recent runs for tag name match (fallback)
-                  const { data: recentRunsCheck2 } = await github.rest.actions.listWorkflowRuns({
-                    owner: 'brewos-io',
-                    repo: 'app',
-                    workflow_id: 'release.yml',
-                    per_page: 20
-                  });
-                  
-                  // Combine: prefer commit SHA match, fallback to tag name match
-                  let candidateRuns2 = newRunsBySha2.workflow_runs;
-                  if (candidateRuns2.length === 0) {
-                    candidateRuns2 = recentRunsCheck2.workflow_runs.filter(run => run.head_branch === tag);
-                  }
-                  
-                  if (candidateRuns2.length > 0) {
-                    workflowRun = candidateRuns2[0];
-                    console.log(`Found workflow run: ${workflowRun.id} (status: ${workflowRun.status}, head_branch: ${workflowRun.head_branch})`);
-                    break;
-                  }
-                  
-                  console.log(`Attempt ${attempts}: No workflow run found yet, waiting ${pollInterval/1000}s...`);
-                  await new Promise(resolve => setTimeout(resolve, pollInterval));
-                }
-                
-                if (!workflowRun) {
-                  throw new Error(`No workflow run found for tag ${tag} (commit ${commitSha}) after ${maxWaitTime/1000/60} minutes`);
-                }
               }
+              
+              console.log(`Attempt ${attempts}: No workflow run found yet, waiting ${pollInterval/1000}s...`);
+              await new Promise(resolve => setTimeout(resolve, pollInterval));
+            }
+
+            if (!workflowRun) {
+              throw new Error(`No workflow run found for tag ${tag} after ${maxWaitTime/1000/60} minutes`);
             }
 
             // If workflow is already completed successfully, use it immediately
